[package]
name = "xjtu-login"
description = "A tool for logging into XJTU network."
version = "0.0.1-alpha.2"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/zly2006/xjtu-login"

[dependencies]
rsa = "0.9.8"
reqwest = { version = "0.12.23", features = ["blocking", "json", "cookies"] }
uuid = "1.18.0"
base64 = "0.22.1"
log = "0.4.27"
thiserror = "2.0.16"
serde_json = "1.0.143"
scraper = "0.24.0"
log4rs = { version = "1.3.0",features = ["console_appender","file_appender"] }
dotenv = "0.15.0"
